Include Sai's full name in Milestone 1 PDF

--- a/doc/codeable.tex
+++ b/doc/codeable.tex
@@ -32,7 +32,7 @@
         
         Jacob Janes 
         
-        Sai Vaka
+        Sai Nishanth Vaka
         
         \vspace*{5em}
         \Large{In partial fulfillment of the requirements for}
