Prepare for general release
This commit adds license headers, updates documentation, and improves folder
structure for the general release of Codeable.

--- a/doc/codeable.tex
+++ b/doc/codeable.tex
@@ -1,3 +1,8 @@
+% Copyright (c) 2022 Rithvik Arun, Joseph Hale, Jacob Hreshchyshyn, Jacob Janes, Sai Nishanth Vaka
+% 
+% This software is released under the MIT License.
+% https://opensource.org/licenses/MIT
+
 \documentclass{article}
 \usepackage{listings}
 \lstset{
@@ -18,7 +23,7 @@
         \Large{\emph{designed for software newcomers.}}
         
         \vspace*{1em}
-        \href{https://github.com/jhale1805/SER502-Spring2022-Team15}{github.com/jhale1805/SER502-Spring2022-Team15}
+        \href{https://github.com/jhale1805/codeable}{github.com/jhale1805/codeable}
 
         \vspace*{5em}
         \Large{Created by}
@@ -180,13 +185,13 @@
     \section{Example Programs}
     
     \subsection{Quadratic Formula}
-    \lstinputlisting{../data/quadratic_formula.md}
-    
+    \lstinputlisting{../data/quadratic_formula.code}
+
     \subsection{Factorial}
-    \lstinputlisting{../data/factorial.md}
-    
-    \subsection{Towers of Hanoi}
-    \lstinputlisting{../data/tower-of-hanoi.md}
+    \lstinputlisting{../data/factorial.code}
+
+    \subsection{Fibonacci}
+    \lstinputlisting{../data/fibonacci.code}
     
     
 \end{document}
